redid lab objective 1 so that it works in browser not console.

--- a/js-lab1.html
+++ b/js-lab1.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta author = "Darryl Mendonez" />
   <title>JS Lab 1</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css' />
+  <style type="text/css" />
+    body {
+      font-family: 'Raleway', sans-serif;
+      background-color: #FFFAD5;
+    }
+  </style>
 </head>
 <body>
-
+  <main class = "container">
+    <h1>Scripting with Java</h1>
+    <h2>1. Write a function to determine if a given variable is a string or not</h2>
+    <button onclick="dataType();">Engage</button>
+    <p id="dataTypeResult"></p>
+  </main> <!-- container -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
   <script src = "js-lab-objective1.js"></script>
 </body>
 </html>
