--- a/js-lab1.html
+++ b/js-lab1.html
@@ -14,13 +14,19 @@
 </head>
 <body>
   <main class = "container">
-    <h1>Scripting with Java</h1>
+    <h1>11/11/2015 Lab Objectives</h1>
+    <hr />
     <h2>1. Write a function to determine if a given variable is a string or not</h2>
-    <button onclick="dataType();">Engage</button>
-    <p id="dataTypeResult"></p>
+    <button onclick="dataType();">Launch Data Type Program</button>
+    <hr />
+    <h2>2. Write a function that tells you which of 2 inputs is smaller</h2>
+    <button onclick="comparison();">Launch Comparison Program</button>
+    <hr />
+    <h2>3. Write a function that concatenates n number of strings together</h2>
+    <button onclick="movieLister();">Launch Concatenator Program</button>
   </main> <!-- container -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-  <script src = "js-lab-objective1.js"></script>
+  <script src = "scripts.js"></script>
 </body>
 </html>
