--- a/js-lab1.html
+++ b/js-lab1.html
@@ -23,7 +23,7 @@
     <button onclick="comparison();">Launch Comparison Program</button>
     <hr />
     <h2>3. Write a function that concatenates n number of strings together</h2>
-    <button onclick="movieLister();">Launch Concatenator Program</button>
+    <button onclick="concatenator();">Launch Concatenator Program</button>
   </main> <!-- container -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
